--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    width: auto;
     font-family: 'Arial', sans-serif;
     background-color: #f9f9f9;
     color: #333;
@@ -75,7 +76,7 @@ body {
     display: flex;
     background-color: #d62828; /* Same background as other buttons */
     color: white;
-    border: none;
+    /* border: none; */
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -231,8 +232,10 @@ main {
     background-color: #444;
 }
 
-/* Botón de regreso */
+/* Botón de Atrás */
 .books-container button {
+    padding: 0.5rem 1rem; /* Adjust padding for smaller size */
+    display: flex;
     background-color: #d62828;
     color: white;
     padding: 8px 12px;
@@ -240,7 +243,7 @@ main {
     border-radius: 5px;
     cursor: pointer;
     margin-bottom: 10px;
-    width: 100%;
+    width: auto;
 }
 
 .books-container button:hover {
